--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             </tbody>
         </table>
         <table border="0px" width="900px" length="1000px">
-            <td><p>Thankyou Ma'am for visiting our site!<br>
+            <td><p>Thankyou dear teacher for visiting our site!<br>
                 we are very grateful to you that you gave us your precious time visiting our site.<br>
                 Please click on the link above which will lead you to the webpage dedicated to you.</p></td>
         </table>
